--- a/ProjectAnimes.Infra.Ioc/ProjectAnimes.Infra.Ioc.csproj
+++ b/ProjectAnimes.Infra.Ioc/ProjectAnimes.Infra.Ioc.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectAnimes.Application\ProjectAnimes.Application.csproj" />
+    <ProjectReference Include="..\ProjectAnimes.Domain\ProjectAnimes.Domain.csproj" />
+    <ProjectReference Include="..\ProjectAnimes.Infra.Data\ProjectAnimes.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
